--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.0",
+    "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "sass": "^1.69.5"
   },
